# spark-observability-agent

./: README.md  dbx_spark_profiler.ipynb  efficiency_analysis.ipynb  efficiency_analysis_prod.ipynb  emr_photon_analysis.ipynb  emr_spark_profiler.ipynb
AgentTools/: LLMToolsDbx.ipynb  LLMToolsDbxSql.ipynb  LLMToolsEmr.ipynb  LLMToolsPython.ipynb  LLMToolsSql.ipynb  UpstreamConnectionsDbx.ipynb  UpstreamConnectionsSql.ipynb  UpstreamFunctionsDbx.ipynb  UpstreamFunctionsEmr.ipynb  UpstreamFunctionsPython.ipynb  UpstreamFunctionsSql.ipynb  agentconnprod.ipynb  agentddl_emr.ipynb  agentddlprod.ipynb
AppDeployment/: CustomAgentNotebook.py
DatabricksApps/mcp-server-hello-world/: manifest.mf
DatabricksApps/mcp-server-hello-world/mcp-server-hello-world/: app.yaml  pyproject.toml  requirements.txt
DatabricksApps/mcp-server-hello-world/mcp-server-hello-world/server/: main.py  spark_log_parser.py
GenieCode/: README.MD
GenieCode/DatabricksApps/mcp/emr_parser/: app.yaml  pyproject.toml  requirements.txt
GenieCode/DatabricksApps/mcp/emr_parser/server/: emr_client.py  main.py  tuning_advisor.py
GenieCode/DatabricksApps/mcp/spark_log_parser/: requirements.txt
GenieCode/DatabricksApps/mcp/spark_log_parser/server/: app.py  spark_log_parser.py
Helpers/: CustomAgentNotebookDbx.ipynb  CustomAgentNotebookEmr.py  agentddlprod.ipynb  emrperms.json  llmprompt.txt  refresh_cookies.py  s3perms.json  shsutils.ipynb  trustrelationship.json
MCP/spark_log_parser/: pyproject.toml  server.py  spark_log_parser.py
MCP/spark_performance_tuning_mcp/: performance_tuning.py  pyproject.toml
mcp/emr_performance_tuning_mcp/: __init__.py  emr_client.py  pyproject.toml
mcp/emr_performance_tuning_mcp/config/: config.py
mcp/emrmcp/emr_performance_tuning_mcp/: README.md  __main__.py  requirements.txt  server.py
mcp/emrmcp/emr_performance_tuning_mcp/config/: __init__.py
mcp/spark_log_parser/: README.md  config.json  server.py  spark_log_parser.py  tuning_advisor.py
mcp/spark_performance_tuning_mcp/: requirements.txt  server.py
