[project]
name = "spark-sql-metrics-mcp"
version = "1.0.0"
description = "MCP server for Spark SQL node metrics extraction and performance tuning"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "databricks-sdk>=0.20.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
