[project]
name = "spark-log-parser-mcp"
version = "1.0.0"
description = "MCP server for parsing Spark event logs and providing tuning recommendations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.65",
    "mcp[cli]>=1.0.0",
    "flask>=3.0.0",
    "databricks-sdk>=0.20.0",
    "requests>=2.31.0"
]

[project.scripts]
spark-mcp-server = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
